--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="Default">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="seo, google, website, internet, web design, design agency, design agency, design agency, design agency, design agency, design agency, logo design atlanta">
     <meta name="description" content="I'm Mike and your should hire me to build your website">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
@@ -15,7 +14,7 @@
     
 	<script src="./js/jquery-2.1.0.js"></script>
 	<script src="./js/bootstrap.js"></script>
-	<script src="./js/blocs.js"></script>
+	<script src="./js/blocs.js"></script> 
 	<script src="./js/jquery.touchSwipe.js"></script>
 	<script src="./js/gmaps.js"></script>
 
@@ -36,25 +35,13 @@
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
-					<div class="keywords" style="color:#cccccc;font-size:1px;">web agency atlanta, web strategy, web design, logo, website, web, internet, logo design</div>
 				<a class="navbar-brand" href="index.html"><img src="img/atlanta%20web%20design%20logo.png" alt="logo, seo, google, website, internet, web design, design agency" height="40" /></a>
-					<div class="keywords" style="color:#cccccc;font-size:1px;">web agency atlanta, web strategy, web design, logo, website, web, internet, logo design</div>
 
-				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
-					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
-				</button>
 			</div>
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
-				<ul class="site-navigation nav navbar-nav">
-					<li>
-						<a href="index.html">Home</a>
-					</li>
-					<li>
-					</li>
-					<li>
-						<a href="page2.html">page2</a>
-					</li>
-				</ul>
+				<div class="site-navigation nav navbar-nav">
+					<a href="page2.html">Contact</a>
+				</div>
 			</div>
 		</nav>
 	</div>
@@ -66,7 +53,7 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
-				<img src="img/atlanta%20web%20designer%20mike.png" class="center-block image-resize-mode" width="100" alt="atlanta web designer mike,seo, google, website, internet, web design, design agency" />
+				<img src="img/atlanta%20web%20designer%20mike.png" class="center-block image-resize-mode" width="100" alt="Profile Image" />
 				<h1 class="text-center hero-bloc-text tc-white ">
 					I'm Mike.
 				</h1>
