--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<script src="./js/jquery.touchSwipe.js"></script>
 	<script src="./js/gmaps.js"></script>
 
-    <title>.</title>
+    <title>GoMike Designs - Web designer living and loving Atlanta</title>
 
     
 <!-- Analytics -->
@@ -31,21 +31,20 @@
 <div class="page-container">
     
 <!-- bloc-0 -->
-<div class="bloc bgc-white l-bloc " id="bloc-0">
+<header class="bloc bgc-white l-bloc " id="bloc-0">
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/atlanta%20web%20design%20logo.png" alt="logo, seo, google, website, internet, web design, design agency" height="40" /></a>
-
+				<a class="navbar-brand" href="index.html"><img src="img/atlanta%20web%20design%20logo.png" alt="Mike Designs Logo" height="40" /></a>
 			</div>
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<div class="site-navigation nav navbar-nav">
-					<a href="page2.html">Contact</a>
+					<a href="contact.html">Contact</a>
 				</div>
 			</div>
 		</nav>
 	</div>
-</div>
+</header>
 <!-- bloc-0 END -->
 
 <!-- bloc-1-hero -->
@@ -58,7 +57,7 @@
 					I'm Mike.
 				</h1>
 				<div class="text-center">
-					<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
+					<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 				</div>
 			</div>
 		</div>
@@ -67,11 +66,11 @@
 <!-- bloc-1-hero END -->
 
 <!-- bloc-2-services -->
-<div class="bloc bgc-white l-bloc" id="bloc-2-services">
+<main class="bloc bgc-white l-bloc" id="bloc-2-services">
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="web agency, web design, logo design, atlanta agency, mike" src="img/title.png" />
+				<div class="titleText"> I create websites and  design graphics that help Atlanta companies become attractive and recognizable online.</div>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
@@ -111,15 +110,15 @@
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<img alt="web agency, web design, logo design " src="img/quote.png" />
+				<div class="qText">"Mike's an awesome freelance web designer! He captured the essence of our company in our website and has helped us double our online sales for our shop in Atlanta." <br /> Taylor Cook, project manager Apple Delights </div>
 			</div>
 		</div>
 	</div>
-</div>
+</main>
 <!-- bloc-2-services END -->
 
 <!-- bloc-3-what-i-do -->
-<div class="bloc tc-white bgc-atomic-tangerine bloc-bg-texture texture-paper b-parallax bg-atlanta-20made-20sign-20orange d-bloc" id="bloc-3-what-i-do">
+<aside class="bloc tc-white bgc-atomic-tangerine bloc-bg-texture texture-paper b-parallax bg-atlanta-20made-20sign-20orange d-bloc" id="bloc-3-what-i-do">
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace black-background">
 			<div class="col-sm-12">
@@ -127,26 +126,26 @@
 					I love Atlanta, my hometown, and want to see all Atlanta businesses succeed. I help by offering web design services that help local businesses stand out and attract new customers online.<br>
 				</h2>
 				<p class="text-center white">
-					I'm super excited you&rsquo;re here. I partner with creative entrepreneurs and local Atlanta business that are either starting or needing to renew their website to attract business. Whether you need a complete brand identity or a redesign of your website, I&rsquo;ll work with you to create something that looks great and structured to be found on Google.<br><br><a class="ltc-white bold-link" href="page2.html">Are you ready, contact me</a><br>
+					I'm super excited you&rsquo;re here. I partner with creative entrepreneurs and local Atlanta business that are either starting or needing to renew their website to attract business. Whether you need a complete brand identity or a redesign of your website, I&rsquo;ll work with you to create something that looks great and structured to be found on Google.<br><br><a class="ltc-white bold-link" href="contact.html">Are you ready, contact me</a><br>
 				</p>
 			</div>
 		</div>
 	</div>
-</div>
+</aside>
 <!-- bloc-3-what-i-do END -->
 
 <!-- bloc-4-portfolio -->
-<div class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
+<aside class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-								<img alt="web agency, web design, logo design " src="img/title2.png" />
+								<div class="titleText">Websites I've designed and developed for Atlanta companies that resulted in more local business</div>
 
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/11.jpg" data-gallery-id="gallery-1" data-caption="Website for Atlanta's Premiere dog salon" data-frame="snapshot-lb"><img src="img/11.jpg" class="img-responsive portfolio-thumb" alt="seo, google, website, internet, web design, design agency website for dog salon"/></a>
+				<a href="#" data-lightbox="img/11.jpg" data-gallery-id="gallery-1" data-caption="Website for Atlanta's Premiere dog salon" data-frame="snapshot-lb"><img src="img/11.jpg" class="img-responsive portfolio-thumb" alt="Dog salon Link"/></a>
 				<h3 class="mg-md text-center">
 					Website for Atlanta&rsquo;s premiere Dog Sitters
 				</h3>
@@ -155,7 +154,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="web redesign for the best cupcakes in Atlanta" data-frame="snapshot-lb"><img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="seo, google, website, internet, web design, design agency website for best cupcakes in atlanta"/></a>
+				<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="web redesign for the best cupcakes in Atlanta" data-frame="snapshot-lb"><img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="Best cupcakes in atlanta Link"/></a>
 				<h3 class="mg-md text-center">
 					Web redesign for the best Atlanta&nbsp;cupcakes
 				</h3>
@@ -166,7 +165,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1" data-caption="New logo and website for Atlanta's best tech gear shop" data-frame="snapshot-lb"><img src="img/3.bmp" class="img-responsive portfolio-thumb" alt="3.jpg" /></a>
+				<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1" data-caption="New logo and website for Atlanta's best tech gear shop" data-frame="snapshot-lb"><img src="img/3.bmp" class="img-responsive portfolio-thumb" alt="Atlanta's best tech gear shop Link" /></a>
 				<h3 class="mg-md text-center">
 					New logo and website for Atl + Gear - Atlanta&rsquo;s best tech gear shop
 				</h3>
@@ -175,36 +174,36 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1" data-caption="Atlanta's legal website generates 30% more clients after web redesign" data-frame="snapshot-lb"><img src="img/4.bmp" class="img-responsive portfolio-thumb" alt="seo, google, website, internet, web design, Atlanta's legal website generates 30% more clients after web redesign" /></a>
+				<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1" data-caption="Atlanta's legal website generates 30% more clients after web redesign" data-frame="snapshot-lb"><img src="img/4.bmp" class="img-responsive portfolio-thumb" alt="Atlanta's legal website Link" /></a>
 				<h3 class="mg-md text-center">
 					Atlanta&rsquo;s legal new website - Generating 30% more law clients with a refresh&nbsp;
 				</h3>
 				<p class="text-center">
-					A few months ago, I created their new website and it&rsquo;s bringing lots of leads.
+					A few months ago, I created their new website and it's bringing lots of leads.
 				</p>
 			</div>
 		</div>
 	</div>
-</div>
+</aside>
 <!-- bloc-4-portfolio END -->
 
 <!-- bloc-5-cta -->
-<div class="bloc bgc-dark-slate-blue bg-atlanta-20made-20sign d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
+<aside class="bloc bgc-dark-slate-blue bg-atlanta-20made-20sign d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 	<div class="container bloc-lg">
 		<div class="row">
-			<h2 class="mg-md text-center tc-white">
-				Ready for a great website? <br>Let&rsquo;s design!
+			<h2 class=" text-center tc-white">
+				Ready for a great website? <br>Let's design!
 			</h2>
 			<div class="col-sm-12 text-center">
-				<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+				<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 			</div>
 		</div>
 	</div>
-</div>
+</aside>
 <!-- bloc-5-cta END -->
 
 <!-- Footer - bloc-8 -->
-<div class="bloc bgc-dark-slate-blue d-bloc" id="bloc-8">
+<footer class="bloc bgc-dark-slate-blue d-bloc" id="bloc-8">
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
@@ -214,7 +213,7 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social" href="index.html"><span class="fa fa-twitter icon-md" alt="twitter"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
@@ -233,21 +232,19 @@
 						</div>
 					</div>
 
-					<div class="keywords" style="color:#364577;">web agency atlanta, web strategy, web design, logo, website, web, internet, logo design</div>
-
 				</div>
 					<div class="row">
-					<div class="col-sm-4">
+					<div class="col-sm-4 footerlinks">
 						Partners
 							<ul>
-								<li><a href="car.com">car.com</a></li>
+								<li><a class="footerLink" href="car.com">car.com</a></li>
 								<li><a href="pizza.com">pizza.com</a></li>
 								<li><a href="myroof.com">myroof.com</a></li>
 								<li><a href="realestateseo.com">realestateseo.com</a></li>
 							</ul>		
 					</div>
 					<div class="col-sm-4">
-						Directories 1
+						Directory
 						<ul>
 							<li><a href="agencydirectory.com">agencydirectory.com</a></li>
 							<li><a href="seodirectory.com">seodirectory.com</a></li>
@@ -261,7 +258,7 @@
 						</ul>
 					</div>
 					<div class="col-sm-4">
-						Directories 2
+						Directory
 						<ul>
 							<li><a href="betterseo.com">betterseo.com</a></li>
 							<li><a href="yesseo.com">yesseo.com</a></li>
@@ -278,7 +275,7 @@
 			</div>
 		</div>
 	</div>
-</div>
+</footer>
 <!-- Footer - bloc-8 END -->
 
 </div>
