after review changes

--- a/contact.html
+++ b/contact.html
@@ -7,15 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
+	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
     
-	<script src="./js/jquery-2.1.0.min.js"></script>
-	<script src="./js/bootstrap.min.js"></script>
-	<script src="./js/blocs.min.js"></script>
+	<script src="./js/jquery-2.1.0.js"></script>
+	<script src="./js/bootstrap.js"></script>
+	<script src="./js/blocs.js"></script>
 	<script src="./js/jqBootstrapValidation.js"></script>
 	<script src="./js/formHandler.js"></script>
     <title>GoMike Designs - Web designer living and loving Atlanta Contact</title>
@@ -81,7 +81,7 @@
 						<label>
 							How did you find me?
 						</label>
-						<input class="form-control" type="email" required id="input_504" />
+						<input class="form-control" type="text" required id="input_504" />
 					</div>
 					<div class="form-group">
 						<label>
@@ -109,7 +109,7 @@
 
 
 <!-- Footer - bloc-8 -->
-<div class="bloc bgc-dark-slate-blue d-bloc" id="bloc-8">
+<footer class="bloc bgc-dark-slate-blue d-bloc" id="bloc-8">
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
@@ -119,29 +119,69 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social twitter" href="https://twitter.com/"><span class="fa fa-twitter icon-md" alt="twitter"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social facebook" href="https://www.facebook.com/"><span class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+							<a class="social dribble" href="https://dribbble.com/tags/social"><span class="fa fa-dribbble icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+							<a class="social instagram" href="https://www.instagram.com/?hl=en"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
+					</div>
+
+				</div>
+					<div class="row">
+					<div class="col-sm-4 footerlinks">
+						Partners
+							<ul>
+								<li><a class="footerLink" href="https://www.car.com/">car.com</a></li>
+								<li><a href="http://pizza.com/">pizza.com</a></li>
+								<li><a href="http://myroof.com/">myroof.com</a></li>
+								<li><a href="https://oneclickseo.agency/search-engine-optimization/real-estate-seo/">realestateseo.com</a></li>
+							</ul>		
+					</div>
+					<div class="col-sm-4">
+						Directory
+						<ul>
+							<li><a href="http://agencydirectory.com/">agencydirectory.com</a></li>
+							<li><a href="http://seodirectory.com/">seodirectory.com</a></li>
+							<li><a href="http://marketingdirectory.com/">marketingdirectory.com</a></li>
+							<li><a href="http://123seo.com/">123seo.com</a></li>
+							<li><a href="http://123site.com/">123site.com</a></li>
+							<li><a href="http://wordpressdirectory.com/">wordpressdirectory.com</a></li>
+							<li><a href="http://agencylistatl.com/">agencylistatl.com</a></li>
+							<li><a href="http://bestagencyatl.com/">bestagencyatl.com</a></li>
+							<li><a href="http://seolist.com/">seolist.com</a></li>
+						</ul>
+					</div>
+					<div class="col-sm-4">
+						Directory
+						<ul>
+							<li><a href="http://betterseo.com/">betterseo.com</a></li>
+							<li><a href="http://yesseo.com/">yesseo.com</a></li>
+							<li><a href="http://seojuicelink.com/">seojuicelink.com</a></li>
+							<li><a href="http://bestlinks.com/">bestlinks.com</a></li>
+							<li><a href="http://linkalot.com/">linkalot.com</a></li>
+							<li><a href="http://backlink.com/">backlink.com</a></li>
+							<li><a href="http://linkjuicedirectory.com/">linkjuicedirectory.com</a></li>
+							<li><a href="http://rankongoogle.com/">rankongoogle.com</a></li>
+							<li><a href="http://trustedseo.com/">trustedseo.com</a></li>
+						</ul>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-</div>
+</footer>
 <!-- Footer - bloc-8 END -->
 
 </div>
