--- a/index.html
+++ b/index.html
@@ -213,22 +213,22 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social twitter" href="index.html"><span class="fa fa-twitter icon-md" alt="twitter"></span></a>
+							<a class="social twitter" href="https://twitter.com/"><span class="fa fa-twitter icon-md" alt="twitter"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social facebook" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social facebook" href="https://www.facebook.com/"><span class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social dribble" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+							<a class="social dribble" href="https://dribbble.com/tags/social"><span class="fa fa-dribbble icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social instagram" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+							<a class="social instagram" href="https://www.instagram.com/?hl=en"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
 
@@ -237,38 +237,38 @@
 					<div class="col-sm-4 footerlinks">
 						Partners
 							<ul>
-								<li><a class="footerLink" href="car.com">car.com</a></li>
-								<li><a href="pizza.com">pizza.com</a></li>
-								<li><a href="myroof.com">myroof.com</a></li>
-								<li><a href="realestateseo.com">realestateseo.com</a></li>
+								<li><a class="footerLink" href="https://www.car.com/">car.com</a></li>
+								<li><a href="http://pizza.com/">pizza.com</a></li>
+								<li><a href="http://myroof.com/">myroof.com</a></li>
+								<li><a href="https://oneclickseo.agency/search-engine-optimization/real-estate-seo/">realestateseo.com</a></li>
 							</ul>		
 					</div>
 					<div class="col-sm-4">
 						Directory
 						<ul>
-							<li><a href="agencydirectory.com">agencydirectory.com</a></li>
-							<li><a href="seodirectory.com">seodirectory.com</a></li>
-							<li><a href="marketingdirectory.com">marketingdirectory.com</a></li>
-							<li><a href="123seo.com">123seo.com</a></li>
-							<li><a href="123site.com">123site.com</a></li>
-							<li><a href="wordpressdirectory.com">wordpressdirectory.com</a></li>
-							<li><a href="agencylistatl.com">agencylistatl.com</a></li>
-							<li><a href="bestagencyatl.com">bestagencyatl.com</a></li>
-							<li><a href="seolist.com">seolist.com</a></li>
+							<li><a href="http://agencydirectory.com/">agencydirectory.com</a></li>
+							<li><a href="http://seodirectory.com/">seodirectory.com</a></li>
+							<li><a href="http://marketingdirectory.com/">marketingdirectory.com</a></li>
+							<li><a href="http://123seo.com/">123seo.com</a></li>
+							<li><a href="http://123site.com/">123site.com</a></li>
+							<li><a href="http://wordpressdirectory.com/">wordpressdirectory.com</a></li>
+							<li><a href="http://agencylistatl.com/">agencylistatl.com</a></li>
+							<li><a href="http://bestagencyatl.com/">bestagencyatl.com</a></li>
+							<li><a href="http://seolist.com/">seolist.com</a></li>
 						</ul>
 					</div>
 					<div class="col-sm-4">
 						Directory
 						<ul>
-							<li><a href="betterseo.com">betterseo.com</a></li>
-							<li><a href="yesseo.com">yesseo.com</a></li>
-							<li><a href="seojuicelink.com">seojuicelink.com</a></li>
-							<li><a href="bestlinks.com">bestlinks.com</a></li>
-							<li><a href="linkalot.com">linkalot.com</a></li>
-							<li><a href="backlink.com">backlink.com</a></li>
-							<li><a href="linkjuicedirectory.com">linkjuicedirectory.com</a></li>
-							<li><a href="rankongoogle.com">rankongoogle.com</a></li>
-							<li><a href="trustedseo.com">trustedseo.com</a></li>
+							<li><a href="http://betterseo.com/">betterseo.com</a></li>
+							<li><a href="http://yesseo.com/">yesseo.com</a></li>
+							<li><a href="http://seojuicelink.com/">seojuicelink.com</a></li>
+							<li><a href="http://bestlinks.com/">bestlinks.com</a></li>
+							<li><a href="http://linkalot.com/">linkalot.com</a></li>
+							<li><a href="http://backlink.com/">backlink.com</a></li>
+							<li><a href="http://linkjuicedirectory.com/">linkjuicedirectory.com</a></li>
+							<li><a href="http://rankongoogle.com/">rankongoogle.com</a></li>
+							<li><a href="http://trustedseo.com/">trustedseo.com</a></li>
 						</ul>
 					</div>
 				</div>
